k8s/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: node-app
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      name: redis
      namespace: node-app
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: bitnami/redis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: node-app
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      protocol: TCP
