k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: node-app
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - name: backend
      port: 80
      protocol: TCP
      targetPort: 3333
