k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: node-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dev
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.org/client-max-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: api.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
  tls:
    - hosts:
        - api.domain.com
      secretName: api-domain-cert
